<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_board_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About_Screen"
    android:background="@color/black"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".1"
        android:src="@drawable/light"
        android:contentDescription="@string/background_description"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moves"
            android:textColor="@color/light_grey"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.084"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.139" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/amber"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.097"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_column="0"
                    android:theme="@style/Button.White"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/button_description"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:theme="@style/Button.White"
                    android:layout_column="1"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/button_description"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:theme="@style/Button.White"
                    android:layout_column="2"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/button_description"
                    style="?android:attr/buttonBarButtonStyle" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/button_description"
                    android:theme="@style/Button.White"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:theme="@style/Button.White"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/button_description"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:theme="@style/Button.White"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/button_description"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    style="?android:attr/buttonBarButtonStyle" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button7"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:theme="@style/Button.White"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/button_description"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:theme="@style/Button.White"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/button_description"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:theme="@style/Button.White"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/button_description"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    style="?android:attr/buttonBarButtonStyle" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/new_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/amber"
            android:contentDescription="@string/new_game"
            android:text="@string/new_game"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout"
            app:layout_constraintVertical_bias="0.271" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>